# Calculator_UI

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  calculator.c  install_docker.ps1  run_calculator.bat  setup.bat
